--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="lib/preloadjs-0.6.1.min.js" type="text/javascript"></script>
     <script src="lib/three.min.js" type="text/javascript"></script>
     <script src="lib/stats.min.js" type="text/javascript"></script>
+    <script src="lib/TrackballControls.js" type="text/javascript"></script>
     
     <script src="js/constants.js" type="text/javascript"></script>
     <script src="js/audio.js" type="text/javascript"></script>
@@ -20,6 +21,11 @@
     <script src="js/game.js" type="text/javascript"></script>
   </head>
   <body>
-    <div class="main"></div>
+    <div id="main" class="main"></div>
+    <div id="devcontrols" class="devcontrols">
+      <button id="rotate_world">
+        Rotate World
+      </button>
+    </div>
   </body>
 </html>
