--- a/index.html
+++ b/index.html
@@ -40,7 +40,13 @@
     <script src="js/other.js" type="text/javascript"></script>
   </head>
   <body>
-    <div id="main" class="main"></div>
+    <div id="main" class="main">
+      <div id="scoreboard" class="scoreboard">
+        <div id="current_score" class="current_score"></div>
+        <div id="high_score" class="high_score"></div>
+        <div id="current_level" class="current_level"></div>
+      </div>
+    </div>
     <div id="options" class="options"></div>
   </body>
 </html>
