--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="lib/soundjs-0.6.1.min.js" type="text/javascript"></script>
     <script src="lib/preloadjs-0.6.1.min.js" type="text/javascript"></script>
     <script src="lib/three.min.js" type="text/javascript"></script>
+    <!--<script src="lib/three.js" type="text/javascript"></script>-->
     <script src="lib/stats.min.js" type="text/javascript"></script>
     <script src="lib/TrackballControls.js" type="text/javascript"></script>
     <script src="lib/pnltri.min.js" type="text/javascript"></script>
